2014-06-29  Yoav Weiss  <yoav@yoav.ws>

        Add support for HTMLImageElement's sizes attribute
        https://bugs.webkit.org/show_bug.cgi?id=133620

        Reviewed by Dean Jackson.

        Added an ENABLE_PICTURE_SIZES compile flag.

        * Configurations/FeatureDefines.xcconfig:

2014-06-27  Sam Weinig  <sam@webkit.org>

        InfoClick (from Nisus Software) dies on viewing found items
        <rdar://problem/17395601>
        https://bugs.webkit.org/show_bug.cgi?id=134410

        Reviewed by Andy Estes.

        InfoClick was calling -[WebPreferences setPrivateBrowsingEnabled:] before
        setting up a WebView (or anything else that would have set up WebKitSystemInterface),
        which now requires a set up WebKitSystemInterface. We can fix this by initializing
        it from +[WebPreferences initialize].

        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]):
        Add call to InitWebCoreSystemInterface().

        (+[WebPreferences _switchNetworkLoaderToNewTestingSession]):
        Remove now unnecessary call to InitWebCoreSystemInterface().

2014-06-27  Peyton Randolph  <prandolph@apple.com>

        Add feature flag for link long-press gesture.
        https://bugs.webkit.org/show_bug.cgi?id=134262

        Reviewed by Enrica Casucci.

        * Configurations/FeatureDefines.xcconfig:
        Add ENABLE_LINK_LONG_PRESS.

2014-06-26  Brady Eidson  <beidson@apple.com>

        Remove use of PlatformStrategies for Gamepad API.
        https://bugs.webkit.org/show_bug.cgi?id=134348

        Reviewed by Dean Jackson.

        Remove all the GamepadStrategy gunk:
        * WebCoreSupport/WebHIDGamepadController.mm: Removed.
        * WebCoreSupport/WebPlatformStrategies.h:
        * WebCoreSupport/WebPlatformStrategies.mm:
        (WebPlatformStrategies::createGamepadStrategy): Deleted.
        (WebPlatformStrategies::startMonitoringGamepads): Deleted.
        (WebPlatformStrategies::stopMonitoringGamepads): Deleted.